Updated with new VM args for Java 17