@@ -37,6 +37,7 @@ java -Xmx512m \
     --add-modules=ALL-SYSTEM \
     --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED \
     --add-exports=java.base/java.lang=ALL-UNNAMED \
+    --add-opens java.base/java.util=ALL-UNNAMED \
     --add-exports=java.xml/com.sun.org.apache.xpath.internal.objects=ALL-UNNAMED \
     --add-exports=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED \
     --add-opens java.base/java.lang=ALL-UNNAMED \
